[project]
name = "gust-py"
version = "0.1.1"
description = "Python runtime and authoring SDK for Gust DAGs, including parser and task invoker"
readme = "README.md"
authors = [
    { name = "Marcio Klepacz", email = "marcioklepacz@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gust-py = "gust.cli:main"
gust = "gust.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gust"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]  # pycodestyle, pyflakes, isort, bugbear, pyupgrade

[tool.pytest.ini_options]
addopts = "-q --cov=gust --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["gust"]

[tool.coverage.report]
skip_empty = true
fail_under = 80
